# owen_nav_stack

./: .gitignore  .gitmodules  README.md  build.bash  styleTheCode.sh
dummy_elevator_traverser/: CMakeLists.txt  package.xml
dummy_elevator_traverser/include/dummy_elevator_traverser/: DummyElevatorTraverser.hpp
dummy_elevator_traverser/src/: DummyElevatorTraverser.cpp  dummy_elevator_traverser_node.cpp
elevator_traverser/: CMakeLists.txt  package.xml
elevator_traverser/include/elevator_traverser/: Configuration.hpp  ElevatorTraverser.hpp
elevator_traverser/src/: Configuration.cpp  ElevatorTraverser.cpp  elevator_traverser_node.cpp
expand_to_goal_costmap_plugin/: CMakeLists.txt  package.xml
expand_to_goal_costmap_plugin/include/expand_to_goal_costmap_plugin/: expand_to_goal_costmap_plugin.hpp  visibility_control.h
expand_to_goal_costmap_plugin/src/: expand_to_goal_costmap_plugin.cpp
map_plugins/expand_to_goal_costmap_plugin/: CMakeLists.txt  expand_to_goal.xml
map_plugins/semantic_map_plugin/: CMakeLists.txt  package.xml  semantic_map.xml
map_plugins/semantic_map_plugin/include/semantic_map_plugin/: SemanticMap.hpp  semantic_map_plugin.hpp  visibility_control.h
map_plugins/semantic_map_plugin/src/: SemanticMap.cpp  semantic_map_plugin.cpp
maps/qset_room/: qset_room.pgm  qset_room.yaml  serialized_qset_room.data
master_navigator/: CMakeLists.txt  package.xml
master_navigator/include/master_navigator/: MasterNavigator.hpp  MultifloorPathPlanner.hpp
master_navigator/src/: MasterNavigator.cpp  MultifloorPathPlanner.cpp  master_navigator.cpp
misc/: 90-roomba.rules  cycloneDDSConfig.xml  fastddsConfig.xml  roombaFi.bash
notes/: add_mulicast_route  how_to_multifloor.txt  interfaceDef.txt  navStackNotes.txt
owen_bringup/: CMakeLists.txt  package.xml
owen_bringup/config/: 1_mapper_params_localization.yaml  2_mapper_params_localization.yaml  elevator.yaml  map_nodes.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  mapper_params_online_sync.yaml  multi_floor_params.yaml  nav2_params.yaml  nav2_params.yaml.dwb  semantic_map_params.yaml
owen_bringup/launch/: map_1666797373.pgm  map_1666797373.yaml  navigation.launch.py  simulation.launch.py  system.launch.py
owen_bringup/scripts/: map_switcher.py  send_multifloor_destination.py
owen_bringup/worlds/: empty_lidar.sdf  willowGarage.sdf  willowGarage.world
owen_common/: CMakeLists.txt  package.xml
owen_common/include/owen_common/: AStar.hpp  Constants.hpp  Line2D.hpp  MailboxData.hpp  Point2D.hpp  Pose2D.hpp  PriorityQueue.hpp  Rectangle.hpp  TimestampData.hpp  math.hpp  owen_common.hpp  shapes.hpp  timestamp.hpp  visibility_control.h
owen_common/src/: math.cpp  owen_common.cpp
owen_localization/: CMakeLists.txt  package.xml
owen_localization/include/owen_localization/: UKF.hpp
owen_localization/src/: UKF.cpp  owen_localization_node.cpp
owen_navigation/: CMakeLists.txt  package.xml
owen_navigation/include/owen_navigation/: NavigatorNode.hpp
owen_navigation/include/owen_navigation/mapping/: GridMap.hpp  Map.hpp  MapManager.hpp
owen_navigation/include/owen_navigation/mapping/obstacle_sources/: BaseObstacleSource.hpp  LidarObstacleSource.hpp  ObstacleSourceFactory.hpp  StaticMapObstacleSource.hpp
owen_navigation/include/owen_navigation/path_followers/: BasePathFollower.hpp  PathFollowerFactory.hpp  PurePursuit.hpp
owen_navigation/include/owen_navigation/path_generators/: AStarNavigator.hpp  BaseNavigator.hpp  BasePathGenerator.hpp  CoveragePathGenerator.hpp  PathGeneratorFactory.hpp  RRTNavigator.hpp
owen_navigation/include/owen_navigation/recovery_behaviours/: BackUpBehaviour.hpp  BaseRecoveryBehaviour.hpp  RecoveryBehaviourFactory.hpp
owen_navigation/src/: AStarNavigator.cpp  BackUpBehaviour.cpp  CoveragePathGenerator.cpp  NavigatorNode.cpp  PathFollowerFactory.cpp  PathGeneratorFactory.cpp  PurePursuit.cpp  RRTNavigator.cpp  RecoveryBehaviourFactory.cpp  owen_navigation_node.cpp
owen_navigation/src/mapping/: LidarObstacleSource.cpp  Map.cpp  MapManager.cpp  ObstacleSourceFactory.cpp  StaticMapObstacleSource.cpp
owen_navigation/testing_utilities/: CoveragePlanner.cpp  PlannerTester.cpp
roomba_msgs/: CMakeLists.txt  package.xml
roomba_msgs/action/: TraverseElevator.action
roomba_msgs/msg/: MultifloorPath.msg  MultifloorPoint.msg  MultifloorRectangle.msg  UpcomingTerrainFeature.msg
roomba_msgs/srv/: CanContinue.srv  GetAvailableDestinations.srv  GetElevatorPosition.srv  GetPathObstacles.srv  LoadConfig.srv
roomba_msgs/srv/rviz/: AddLabel.srv  AddMapNode.srv  SwitchLabellingType.srv
roomba_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
roomba_rviz_plugins/include/roomba_rviz_plugins/: constants.hpp  map_node_labelling_panel.hpp  map_node_labelling_tool.hpp  terrain_labelling_panel.hpp  terrain_labelling_tool.hpp
roomba_rviz_plugins/src/: map_node_labelling_panel.cpp  map_node_labelling_tool.cpp  terrain_labelling_panel.cpp  terrain_labelling_tool.cpp
semantic_costmap_plugin/: CMakeLists.txt  package.xml
semantic_costmap_plugin/include/semantic_costmap_plugin/: semantic_costmap_plugin.hpp
semantic_costmap_plugin/src/: semantic_costmap_plugin.cpp
semantic_mapping/map_features/: CMakeLists.txt  package.xml  testing.py
semantic_mapping/map_features/include/map_features/: FeaturesInterface.hpp
semantic_mapping/map_features/src/: FeaturesInterface.cpp  feature_node.cpp
semantic_mapping/semantic_costmap_plugin/: CMakeLists.txt  package.xml  semantic_map.xml
semantic_mapping/semantic_costmap_plugin/include/semantic_costmap_plugin/: semantic_costmap_plugin.hpp  (+1 more)
semantic_mapping/semantic_costmap_plugin/src/: semantic_costmap_plugin.cpp
system_controller/: CMakeLists.txt  package.xml
system_controller/include/system_controller/: SystemController.hpp
system_controller/src/: SystemController.cpp  system_controller_node.cpp
user_interface/: README.md  Rooms.json  app.py  backend.py  backend_test.py  obstacles.json  real_backend.py
user_interface/dark/: stylesheet.qss
user_interface/light/: stylesheet.qss
