<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>owen_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="17ofh@queensu.ca">owen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>slam_toolbox</depend>
  <depend>system_controller</depend>
  <depend>create_driver</depend>
  <depend>create_bringup</depend>
  <depend>create_msgs</depend>
  <!-- <depend>navigation2</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
